--- a/RegistroTecnicos/Components/Layout/NavMenu.razor
+++ b/RegistroTecnicos/Components/Layout/NavMenu.razor
@@ -15,16 +15,10 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Create">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Index">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Tecnicos
             </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        </div>     
     </nav>
 </div>
 
