aplicando File scoped namespaces a cada archivo #3

--- a/RegistroTecnicos/Components/Pages/Registro/Delete.razor
+++ b/RegistroTecnicos/Components/Pages/Registro/Delete.razor
@@ -5,7 +5,7 @@
 @rendermode InteractiveServer
 @inject NotificationService notificationService
 
-<PageTitle>Eliminar Prioridad</PageTitle>
+<PageTitle>Eliminar Tecnico</PageTitle>
 
 @if (Tecnico != null)
 {
