--- a/RegistroTecnicos/wwwroot/app.css
+++ b/RegistroTecnicos/wwwroot/app.css
@@ -16,6 +16,9 @@ a, .btn-link {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+.sizeid {
+    width: 40%;    height: 1em;
+}
 .content {
     padding-top: 1.1rem;
 }
