Creando Detalle del trabajo

--- a/RegistroTecnicos/Components/Pages/Registro_c/Create.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_c/Create.razor
@@ -35,7 +35,7 @@
             @* WhatsApp *@
             <div class="mb-3">
                 <label for="WhatsApp" class="form-label">WhatsApp:</label>
-                <InputNumber @bind-Value="Cliente.Whatsapp" class="form-control" />
+                <InputText @bind-Value="Cliente.Whatsapp" class="form-control" />
                 <ValidationMessage For="@(() => Cliente.Whatsapp)" />
             </div>
 
@@ -45,7 +45,7 @@
             <div class="btn-group">
                 <button type="button" class="btn btn-outline-primary ml-2" @onclick="Nuevo"><span class="bi bi-plus"></span> Nuevo </button>
                 <button type="submit" class="btn btn-outline-success ml-2"><span class="bi bi-check-circle-fill"></span> Guardar </button>             
-                <a type="button" href="/Index/" class="btn btn-outline-danger"><span class="bi bi-arrow-bar-left"></span> Retroceder </a>
+                <a type="button" href="/Clientes/Index" class="btn btn-outline-danger"><span class="bi bi-arrow-bar-left"></span> Retroceder </a>
             </div>
         </div>
     </div>
