--- a/RegistroTecnicos/Components/Layout/NavMenu.razor
+++ b/RegistroTecnicos/Components/Layout/NavMenu.razor
@@ -18,7 +18,13 @@
             <NavLink class="nav-link" href="Index">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Tecnicos
             </NavLink>
-        </div>     
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/Clientes/Index">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Clientes
+            </NavLink>
+        </div>
     </nav>
 </div>
 
