--- a/RegistroTecnicos/Components/Pages/Registro_t/Create.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_t/Create.razor
@@ -1,40 +1,49 @@
-﻿@page "/Clientes/Edit/{clienteId:int}"
-@inject ClientesServices clientesServices
+﻿@page "/Trabajos/Create"
+@page "/Trabajos/Create/{trabajoId:int}"
+@inject TrabajosServices trabajosServices
 @inject NavigationManager navigationManager
 @rendermode InteractiveServer
 @inject NotificationService notificationService
 
-<EditForm Model="Cliente" OnValidSubmit="Guardar">
+<EditForm Model="Trabajo" OnValidSubmit="Guardar">
     <DataAnnotationsValidator />
-    <div class="card shadow-lg border-0 rounded" style="background-color: #f0f0fa;">
+    <div class="card shadow-lg border-0 rounded" style="background-color: #f8f9fa;">
         <div class="card-header bg-primary text-white" style="text-align: center;">
-            <h3> <i class="fas fa-clipboard-list"></i> Editar Cliente</h3>
+            <h3> <i class="fas fa-clipboard-list"></i> Registro de Trabajos</h3>
         </div>
 
         <div class="card-body">
-
+            @* TrabajoId *@
             <div class="row">
-
                 <div class="col-md-6 mb-3">
-                    <label for="ClienteId" class="form-label">ClienteId:</label>
+                    <label for="TrabajoId" class="form-label">TrabajoId:</label>
                     <div class="input-group">
-                        <div style="width: 40%; height: 1em;">
-                            <InputNumber @bind-Value="Cliente.ClienteId" class="form-control" style="font-size: 0.8em;" aria-describedby="BotonBuscar" />
+                        <div class="sizeid">
+                            <InputNumber @bind-Value="Trabajo.TrabajoId" class="form-control" style="font-size: 0.8em;" aria-describedby="BotonBuscar" />
                         </div>
                     </div>
                 </div>
             </div>
 
+            @* Descripcion *@
             <div class="mb-3">
-                <label for="Nombres" class="form-label">Nombres:</label>
-                <InputText @bind-Value="Cliente.Nombres" class="form-control" />
-                <ValidationMessage For="@(() => Cliente.Nombres)" />
+                <label for="Descripcion" class="form-label">Descripcion:</label>
+                <InputText @bind-Value="Trabajo.Descripcion" class="form-control" />
+                <ValidationMessage For="@(() => Trabajo.Descripcion)" />
             </div>
 
+            @* Fecha *@
             <div class="mb-3">
-                <label for="WhatsApp" class="form-label">WhatsApp:</label>
-                <InputNumber @bind-Value="Cliente.Whatsapp" class="form-control" />
-                <ValidationMessage For="@(() => Cliente.Whatsapp)" />
+                <label for="Fecha" class="form-label">Fecha:</label>
+                <InputDate @bind-Value="Trabajo.Fecha" class="form-control" />
+                <ValidationMessage For="@(() => Trabajo.Fecha)" />
+            </div>
+
+            @* Monto *@
+            <div class="mb-3">
+                <label for="Monto" class="form-label">Monto:</label>
+                <InputNumber @bind-Value="Trabajo.Monto" class="form-control" />
+                <ValidationMessage For="@(() => Trabajo.Monto)" />
             </div>
 
         </div>
@@ -49,29 +58,32 @@
     </div>
 </EditForm>
 
+
+
+
 @code {
     [Parameter]
-    public int? clienteId { get; set; }
+    public int? trabajoId { get; set; }
 
-    public Clientes Cliente { get; set; } = new Clientes();
+    public Trabajos Trabajo { get; set; } = new Trabajos();
     private bool Existe = false;
 
     protected override async Task OnInitializedAsync()
     {
-        if (clienteId.HasValue)
+        if (trabajoId.HasValue)
         {
-            Cliente.ClienteId = clienteId.Value;
+            Trabajo.TrabajoId = trabajoId.Value;
             await Buscar();
         }
     }
 
     public async Task Buscar()
     {
-        var clienteEncontrado = await clientesServices.Buscar(Cliente.ClienteId);
+        var trabajoEncontrado = await trabajosServices.Buscar(Trabajo.TrabajoId);
 
-        if (clienteEncontrado != null)
+        if (trabajoEncontrado != null)
         {
-            Cliente = clienteEncontrado;
+            Trabajo = trabajoEncontrado;
         }
         else
         {
@@ -83,13 +95,13 @@
 
     public void Nuevo()
     {
-        Cliente = new Clientes();
+        Trabajo = new Trabajos();
         Existe = false;
     }
 
     public async Task Guardar()
     {
-        var guardo = await clientesServices.Guardar(this.Cliente);
+        var guardo = await trabajosServices.Guardar(this.Trabajo);
         if (guardo != null)
         {
             notificationService.ShowNotification(titulo: "Guardado", mensaje: "Se a guardado correctamente", NotificationSeverity.Success);
@@ -104,7 +116,7 @@
 
     public async Task Eliminar()
     {
-        var eliminado = await clientesServices.Eliminar(Cliente.ClienteId);
+        var eliminado = await trabajosServices.Eliminar(Trabajo.TrabajoId);
         if (eliminado != null)
         {
             notificationService.ShowNotification(titulo: "Eliminado", mensaje: "Se a eliminado correctamente", NotificationSeverity.Success);
@@ -115,5 +127,6 @@
         }
         Nuevo();
     }
+
 
 }
