Agregando funcion WhatsApp y modificando consulta trabajo para presentar Tecnico y cliente

--- a/RegistroTecnicos/Components/Pages/Registro_c/Detail.razor
+++ b/RegistroTecnicos/Components/Pages/Registro_c/Detail.razor
@@ -56,7 +56,7 @@ else
     
     public void Volver()
     {
-        navigationManager.NavigateTo("/index");
+        navigationManager.NavigateTo("/Clientes/index");
     }
 
 }
