--- a/RegistroTecnicos/Components/Layout/NavMenu.razor
+++ b/RegistroTecnicos/Components/Layout/NavMenu.razor
@@ -10,7 +10,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
 
@@ -27,7 +27,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/Trabajos/Index">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Trabajos
+                <span class="bi bi-clipboard" aria-hidden="true"></span> Trabajos
             </NavLink>
         </div>
 
